atomic testing implemented, but commented out due to incomplete piece implementation #024